--- a/02. Linear regression/02. Linear regression.ipynb
+++ b/02. Linear regression/02. Linear regression.ipynb
@@ -498,7 +498,7 @@
    "source": [
     "### Метод Бройдена — Флетчера — Гольдфарба — Шанно (BFGS)\n",
     "\n",
-    "Этот метод реализован в функции `sp.optimize.minimize`. Восользуйтесь ей, чтобы найти оптимальное значение вектора $\\theta$."
+    "Этот метод реализован в функции `sp.optimize.minimize`. Воспользуйтесь ей, чтобы найти оптимальное значение вектора $\\theta$. (Учтите, что функция находит минимум функции, от нескольких переменных. Параметр `theta` нужно будет распаковать, а параметры `X` и `y` связать замыканием.)"
    ]
   },
   {
