--- a/02. Linear regression/02. Linear regression.ipynb
+++ b/02. Linear regression/02. Linear regression.ipynb
@@ -336,13 +336,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Функция `J` принимает на входе как вектор-столбец параметров `theta`, так и данные обучающей выборки — `X` и `y`. Функция должна вернуть число, характеризующее среднюю ошибку предсказанного моделью значения от истинного."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -498,7 +491,7 @@
    "source": [
     "### Метод Бройдена — Флетчера — Гольдфарба — Шанно (BFGS)\n",
     "\n",
-    "Этот метод реализован в функции `sp.optimize.minimize`. Воспользуйтесь ей, чтобы найти оптимальное значение вектора $\\theta$. (Учтите, что функция находит минимум функции, от нескольких переменных. Параметр `theta` нужно будет распаковать, а параметры `X` и `y` связать замыканием.)"
+    "Этот метод реализован в функции `sp.optimize.minimize`. Воспользуйтесь ей, чтобы найти оптимальное значение вектора $\\theta$. (Учтите, что команда находит минимум функции от нескольких переменных. Параметр `theta` нужно будет распаковать, а параметры `X` и `y` связать замыканием.)"
    ]
   },
   {
