Improve description of function J

--- a/02. Linear regression/02. Linear regression.ipynb
+++ b/02. Linear regression/02. Linear regression.ipynb
@@ -332,7 +332,9 @@
    "source": [
     "### Градиентный спуск\n",
     "\n",
-    "Найдём $\\theta$ методом градиентного спуска. Для этого определим функции `J` и `dJ`, соответствующие функции потерь и вектору градиента."
+    "Найдём $\\theta$ методом градиентного спуска. Для этого определим функции `J` и `dJ`, соответствующие функции потерь и вектору градиента.\n",
+    "\n",
+    "Функция `J` принимает на входе как вектор-столбец параметров `theta`, так и данные обучающей выборки — `X` и `y`. Функция должна вернуть число, характеризующее среднюю ошибку предсказанного моделью значения от истинного."
    ]
   },
   {
