Improve ambiguous part

--- a/02. Linear regression/02. Linear regression.ipynb
+++ b/02. Linear regression/02. Linear regression.ipynb
@@ -269,7 +269,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Проверим работу функции для прямой пропорциональности."
+    "Проверим работу функции для прямой пропорциональности. Параметры $\\theta$ выбраны произвольно и не соответствуют искомому решению."
    ]
   },
   {
@@ -280,7 +280,7 @@
    },
    "outputs": [],
    "source": [
-    "theta = np.array([[0], [1]])\n",
+    "theta = np.array([[1], [0.1]])\n",
     "yp = h(Xdata1, theta) # Предсказанные значения\n",
     "plot_data(Xdata, ydata, Xdata, yp)"
    ]
