--- a/02. Linear regression/02. Linear regression.ipynb
+++ b/02. Linear regression/02. Linear regression.ipynb
@@ -403,7 +403,7 @@
    "source": [
     "eps = 0.01\n",
     "# НАЙДИТЕ ОПТИМАЛЬНОЕ ЗНАЧЕНИЕ КОЭФФИЦИЕНТА alpha\n",
-    "alpha = 0.3"
+    "alpha = 0.00000001"
    ]
   },
   {
@@ -427,7 +427,7 @@
    },
    "outputs": [],
    "source": [
-    "k, Kmax = 0, 10000\n",
+    "k, Kmax = 0, 1000000\n",
     "norms = []\n",
     "\n",
     "# Инициализация\n",
