Improve part with BFGS minimization

--- a/02. Linear regression/02. Linear regression.ipynb
+++ b/02. Linear regression/02. Linear regression.ipynb
@@ -423,7 +423,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -493,7 +493,9 @@
    "source": [
     "### Метод Бройдена — Флетчера — Гольдфарба — Шанно (BFGS)\n",
     "\n",
-    "Этот метод реализован в функции `sp.optimize.minimize`. Воспользуйтесь ей, чтобы найти оптимальное значение вектора $\\theta$. (Учтите, что команда находит минимум функции от нескольких переменных. Параметр `theta` нужно будет распаковать, а параметры `X` и `y` связать замыканием.)"
+    "Этот метод реализован в функции `sp.optimize.minimize`. Воспользуемся им, чтобы найти оптимальное значение вектора $\\theta$. (Учтите, что команда находит минимум функции от нескольких переменных. Параметр `theta` нужно будет упаковать в вектор, а параметры `X` и `y` связать замыканием.)\n",
+    "\n",
+    "По аналогии с функцией `Jv` напишите функцию `dJv` для вычисления градиента по одному параметру `theta`. Добавьте в `sp.optimize.minimize` параметр `jac=dJv` для ускорения расчётов и повышения точности."
    ]
   },
   {
@@ -504,9 +506,20 @@
    },
    "outputs": [],
    "source": [
+    "def Jv(th):\n",
+    "    theta = np.array(th)\n",
+    "    theta = np.reshape(theta, (n+1, 1))\n",
+    "    return J(theta, Xdata1, ydata)[0, 0]\n",
+    "\n",
     "# ИСПРАВЬТЕ ИЛИ ДОПОЛНИТЕ КОД НИЖЕ\n",
-    "theta_bfgs = np.zeros((n+1, 1))\n",
-    "###"
+    "def dJv(th):\n",
+    "    pass\n",
+    "\n",
+    "result = np.minimize(Jv, [0.0] * (n+1), method='BFGS')\n",
+    "###\n",
+    "\n",
+    "print(result)\n",
+    "theta_bfgs = np.reshape(result.x, (n+1, 1))"
    ]
   },
   {
