--- a/01. Matrices in Python/01. Matrices in Python.ipynb
+++ b/01. Matrices in Python/01. Matrices in Python.ipynb
@@ -1265,7 +1265,8 @@
     "* [SciPy — Документация (англ.)](http://docs.scipy.org/doc/scipy/reference/)\n",
     "* [Matplotlib — Документация (англ.)](http://matplotlib.org/contents.html)\n",
     "* [NumPy, пособие для новичков](http://habrahabr.ru/post/121031/)\n",
-    "* [Серия статей о NumPy](http://pythonworld.ru/numpy)"
+    "* [Серия статей о NumPy](http://pythonworld.ru/numpy)\n",
+    "* [10 Minutes to pandas](http://pandas.pydata.org/pandas-docs/stable/10min.html)"
    ]
   },
   {
