--- a/02. Linear regression/02. Linear regression.ipynb
+++ b/02. Linear regression/02. Linear regression.ipynb
@@ -515,7 +515,7 @@
     "def dJv(th):\n",
     "    pass\n",
     "\n",
-    "result = np.minimize(Jv, [0.0] * (n+1), method='BFGS')\n",
+    "result = so.minimize(Jv, [0.0] * (n+1), method='BFGS')\n",
     "###\n",
     "\n",
     "print(result)\n",
