--- a/01. Matrices in Python/01. Matrices in Python.ipynb
+++ b/01. Matrices in Python/01. Matrices in Python.ipynb
@@ -802,7 +802,7 @@
    "source": [
     "Точка минимума получилась равной 4.99999999, что близко к правильному значению.\n",
     "\n",
-    "Рассмотренный метод — квазиньютоновский и использует для поиска минимума производные, которые по умолчанию находит численно. Можно значительно ускорить вычисления и повысить их точность, задав их явно.\n",
+    "Рассмотренный метод — квазиньютоновский и использует для поиска минимума производные, которые по умолчанию находит численно. Можно значительно ускорить вычисления и повысить их точность, записав производную явно.\n",
     "\n",
     "$$f'(x) = 2 (x - 5)$$"
    ]
@@ -816,8 +816,8 @@
    "outputs": [],
    "source": [
     "def df(x):\n",
-    "    d = 2 * (x - 5)\n",
-    "    return np.array([d])\n",
+    "    return 2 * (x - 5)\n",
+    "\n",
     "x_min = so.minimize(f, 0.0, method='BFGS', jac=df) # jac — якобиан, в 1-мерном случае — производная\n",
     "print (x_min)"
    ]
@@ -826,7 +826,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Функция `minimize` достаточно универсальна и позволяет находить минимумы функций нескольких переменных с помощью множества других методов, среди которых: `BFGS`, `L-BFGS-B`, `Nelder-Mead`, `Powell`, `CG` (метод сопряжённых градиентов), `COBYLA`, `SLSQP` и другие. Имеет смысл ознакомиться с областями применения этих методов для эффективного использования в дальнейшем.\n",
+    "Если требуется найти минимум функции нескольких переменных, то она записывается как функция, принимающая список.\n",
+    "\n",
+    "Например, найдём минимум функции\n",
+    "$$\n",
+    "g(x_0, x_1) = (x_0 - 4)^2 + (x_1 - 3)^2.\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def g(xs):\n",
+    "    return (xs[0] - 4)**2 + (xs[1] - 3)**2\n",
+    "\n",
+    "# Якобиан (если его не использовать, снизится точность и скорость)\n",
+    "def dg(xs):\n",
+    "    dgdx0 = 2 * (xs[0] - 4)       # Производная по x0\n",
+    "    dgdx1 = 2 * (xs[1] - 3)       # Производная по x1\n",
+    "    return np.array([dgdx0, dgdx1])\n",
+    "    \n",
+    "\n",
+    "x_min = so.minimize(g, [0.0, 0.0], method='BFGS', jac=dg)\n",
+    "print (x_min)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Функция `minimize` достаточно универсальна и позволяет находить минимумы функций нескольких переменных с помощью множества других методов, среди которых: `BFGS`, `L-BFGS-B`, `Nelder-Mead`, `Powell`, `CG` (метод сопряжённых градиентов), `COBYLA`, `SLSQP` и другие. Также `minimize` можен решать задачу оптимизации с ограничениями. Имеет смысл ознакомиться с областями применения этих методов для эффективного использования в дальнейшем.\n",
     "\n",
     "В библиотеке есть несколько функций для глобальной оптимизации. Например, в функции `differential_evolution` реализован метод дифференциальной эволюции.\n",
     "\n",
@@ -1351,7 +1385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3+"
+   "version": "3.5.2+"
   }
  },
  "nbformat": 4,
